# pforge

./: .gitignore  ARCHITECTURE.md  CI_CD.md  CLAUDE.md  COVERAGE_NOTES.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  Dockerfile.alpine  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MEMORY_SAFETY.md  MUTATION_TESTING.md  Makefile  PERFORMANCE.md  PROGRESS_SUMMARY.md  QUALITY_ANALYSIS.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  STATUS.md  STATUS_UPDATE.md  USER_GUIDE.md  deep_context.md  deny.toml  docker-compose.yml  install.sh  lcov.info  roadmap.yaml  server.json
.github/workflows/: book.yml  ci.yml  fuzz.yml  publish-mcp.yml  release.yml
.pmat/: quality-gates.yaml
Formula/: pforge.rb
bridges/: README.md
bridges/deno/: CHANGELOG.md  README.md  RELEASE_NOTES.md  bridge.ts  deno.json  ffi.ts  handler.ts  schema.ts
bridges/go/: example.go  pforge_bridge.go
bridges/python/: example.py  pforge_bridge.py
crates/pforge-bridge/: Cargo.toml  README.md
crates/pforge-bridge/src/: lib.rs
crates/pforge-cli/: Cargo.toml  README.md
crates/pforge-cli/src/: main.rs
crates/pforge-cli/src/commands/: build.rs  dev.rs  mod.rs  new.rs  serve.rs
crates/pforge-cli/templates/new-project/src/: main.rs.template
crates/pforge-cli/tests/: scaffold_tests.rs
crates/pforge-codegen/: Cargo.toml  README.md
crates/pforge-codegen/src/: generator.rs  lib.rs
crates/pforge-config/: Cargo.toml  README.md
crates/pforge-config/src/: error.rs  lib.rs  parser.rs  types.rs  validator.rs
crates/pforge-integration-tests/: Cargo.toml  e2e_test.rs  integration_test.rs  property_test.rs
crates/pforge-macro/: Cargo.toml  README.md
crates/pforge-macro/src/: lib.rs
crates/pforge-runtime/: Cargo.toml  README.md
crates/pforge-runtime/benches/: dispatch_benchmark.rs  throughput_benchmark.rs
crates/pforge-runtime/examples/: README.md  calculator.rs  middleware_demo.rs
crates/pforge-runtime/src/: error.rs  handler.rs  lib.rs  middleware.rs  prompt.rs  recovery.rs  registry.rs  resource.rs  server.rs  state.rs  telemetry.rs  timeout.rs  transport.rs
crates/pforge-runtime/src/handlers/: cli.rs  http.rs  mod.rs  pipeline.rs  wrappers.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  USER_GUIDE.md  mcp-registry-publish.md
docs/specifications/: deno-bridge-specification.md  pforge-specification.md
docs/tickets/: TICKET-1001_PROJECT_SCAFFOLDING.md  TICKET-1002_YAML_PARSER.md  TICKET-1003_HANDLER_REGISTRY.md  TICKET-1004_CODE_GENERATION.md  TICKET-1005_PMCP_INTEGRATION.md  TICKET-1006_CLI_HANDLER.md  TICKET-1007_HTTP_HANDLER.md  TICKET-1008_PIPELINE_HANDLER.md  TICKET-1009_E2E_INTEGRATION.md  TICKET-1010_CLI_COMMANDS.md  TICKET-2001_STATE_MANAGEMENT.md  TICKET-2002_RESOURCES_PROMPTS.md  TICKET-2003_middleware_chain.md  TICKET-2004_timeout_and_retry.md  TICKET-2005_multi-transport_sse_websocket.md  TICKET-2006_language_bridge_ffi.md  TICKET-2007_python_bridge.md  TICKET-2008_go_bridge.md  TICKET-2009_performance_benchmarks.md  TICKET-2010_error_recovery.md  TICKET-3001_pmat_quality_gates.md  TICKET-3002_property_testing.md  TICKET-3003_mutation_testing.md  TICKET-3004_fuzzing.md  TICKET-3005_integration_tests.md  TICKET-3006_memory_safety.md  TICKET-3007_security_audit.md  TICKET-3008_performance_profiling.md  TICKET-3009_documentation.md  TICKET-3010_CICD_PIPELINE.md  TICKET-4001_example_hello_world.md  TICKET-4002_example_pmat_server.md  TICKET-4003_example_polyglot.md  TICKET-4004_example_production.md  TICKET-4005_user_guide.md  TICKET-4006_architecture_docs.md  TICKET-4007_release_automation.md  TICKET-4008_package_distribution.md  TICKET-4009_telemetry.md  TICKET-4010_final_quality_gate.md
examples/calculator/: Cargo.toml  README.md  forge.yaml
examples/calculator/src/: handlers.rs
examples/hello-world/: Cargo.toml  README.md  pforge.yaml
examples/hello-world/src/: main.rs
examples/hello-world/src/handlers/: greet.rs
examples/pmat-server/: Cargo.toml  README.md  pforge.yaml
examples/polyglot-server/: Cargo.toml  README.md  pforge.yaml
examples/production-server/: Cargo.toml  README.md  config.json  pforge.yaml
examples/production-server/src/: main.rs
examples/production-server/src/handlers/: counter.rs  mod.rs  processor.rs
examples/rest-api-proxy/: Cargo.toml  README.md  pforge.yaml
examples/rest-api-proxy/src/: main.rs
examples/telemetry-server/: Cargo.toml  README.md  pforge.yaml
examples/telemetry-server/src/: main.rs
examples/telemetry-server/src/handlers/: echo.rs  health.rs  metrics.rs  mod.rs
fuzz/: Cargo.toml  README.md  run_fuzz.sh
fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_handler_dispatch.rs  fuzz_validation.rs
pforge-book/: book.toml
pforge-book/book/: 404.html  appendix-a-config-reference.html  appendix-b-api-docs.html  appendix-c-troubleshooting.html  appendix-d-contributing.html  ch01-00-pforge-vs-pmcp.html  ch01-01-when-pforge.html  ch01-02-when-pmcp.html  ch01-03-comparison.html  ch01-04-migration.html  ch01-05-architecture-pmcp.html  ch02-00-quick-start.html  ch02-01-installation.html  ch02-02-first-server.html  ch02-03-testing.html  ch03-00-calculator.html  ch03-01-yaml-config.html  ch03-02-handler.html  ch03-03-tests.html  ch03-04-running.html  ch04-00-file-ops.html  ch04-01-cli-wrappers.html  ch04-02-streaming.html  ch04-03-integration-tests.html  ch05-00-github-api.html  ch05-01-http-config.html  ch05-02-authentication.html  ch05-03-error-handling.html  ch06-00-data-pipeline.html  ch06-01-composition.html  ch06-02-conditionals.html  ch06-03-state.html  ch07-00-five-minute-cycle.html  ch07-01-red.html  ch07-02-green.html  ch07-03-refactor.html  ch07-04-commit.html  ch08-00-quality-gates.html  ch08-01-pre-commit.html  ch08-02-pmat.html  (+28 more)
pforge-book/src/: SUMMARY.md  appendix-a-config-reference.md  appendix-b-api-docs.md  appendix-c-troubleshooting.md  appendix-d-contributing.md  ch01-00-pforge-vs-pmcp.md  (+59 more)
scripts/: batch_create_tickets.sh  create_remaining_tickets.sh  pre-commit.sh  release.sh  validate_markdown_links.sh
(+26 files in other folders)
