[workspace]
resolver = "2"
members = [
    "crates/pforge-cli",
    "crates/pforge-runtime",
    "crates/pforge-codegen",
    "crates/pforge-config",
    "crates/pforge-macro",
    "crates/pforge-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/paiml/pforge"
authors = ["Pragmatic AI Labs"]

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_yml = "0.0.10"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Internal crates
pforge-runtime = { path = "crates/pforge-runtime" }
pforge-config = { path = "crates/pforge-config" }
pforge-codegen = { path = "crates/pforge-codegen" }
pforge-macro = { path = "crates/pforge-macro" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
