[package]
name = "pforge-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
pforge-runtime = { workspace = true }
pforge-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde_yml = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }

[[test]]
name = "integration"
path = "integration_test.rs"

[[test]]
name = "property"
path = "property_test.rs"
