[package]
name = "pforge-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pforge-runtime = { workspace = true }
pforge-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "integration"
path = "integration_test.rs"

[[test]]
name = "property"
path = "property_test.rs"

[[test]]
name = "e2e"
path = "e2e_test.rs"
