[package]
name = "pforge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
pforge-config = { workspace = true }

# Runtime-specific dependencies
pmcp = "1.6"
schemars = { version = "0.8", features = ["derive"] }
rustc-hash = "2.0"
dashmap = "6.0"
reqwest = { version = "0.12", features = ["json"] }
sled = "0.34"
regex = "1.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
