[package]
name = "pforge-example-calculator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pforge-runtime = { path = "../../crates/pforge-runtime" }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
serde_json = "1.0"
