[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false

# This is a standalone example, not part of the workspace
[workspace]

[dependencies]
pforge-runtime = { path = "../../crates/pforge-runtime" }
pforge-config = { path = "../../crates/pforge-config" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
schemars = { version = "0.8", features = ["derive"] }
