[package]
name = "production-server"
version = "1.0.0"
edition = "2021"
publish = false

# This is a standalone example, not part of the workspace
[workspace]

[dependencies]
pforge-runtime = { path = "../../crates/pforge-runtime" }
pforge-config = { path = "../../crates/pforge-config" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
schemars = { version = "0.8", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
