[package]
name = "rest-api-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[dependencies]
pforge-runtime = { path = "../../crates/pforge-runtime" }
pforge-config = { path = "../../crates/pforge-config" }
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0"
