[package]
name = "telemetry-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
pforge-config = { path = "../../crates/pforge-config" }
pforge-runtime = { path = "../../crates/pforge-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
